Fix image position on small screen

--- a/Main/static/assets/css/navbar.css
+++ b/Main/static/assets/css/navbar.css
@@ -97,10 +97,6 @@
             margin-right: 25px;
         }
 
-        #sticky_nav .nav-right img {
-            margin: 0 5px;
-        }
-
     }
 
 }
